# service/userservice.go
@@ -60,7 +60,7 @@ func CreateUser(c *gin.Context) {
 	//user.PassWord=passWord
 	user.PassWord = utils.MakePassword(passWord, salt)
 	fmt.Println("user.PassWord:", passWord)
-
+	user.Salt = salt
 	fmt.Println("密码一致")
 	models.CreateUser(user)
 	c.JSON(200, gin.H{
@@ -118,5 +118,38 @@ func UpdateUser(c *gin.Context) {
 	models.UpDateUser(user)
 	c.JSON(200, gin.H{
 		"message": "修改用户成功！",
+	})
+}
+
+// FindUserByNameAndPwd
+// Summary 所有用户
+// @Tags  用户模块
+// @param name query string false "用户名"
+// @param password query string false "密码"
+// @Success  200  {string}  json{"code","message"}
+// @Router  /user/findUserByNameAndPwd [get]
+func FindUserByNameAndPwd(c *gin.Context) {
+	data := models.UserBasic{}
+	name := c.Query("name")
+	password := c.Query("password")
+	user := models.FindUserByName(name)
+	if user.Name == "" {
+		c.JSON(200, gin.H{
+			"message": "该用户不存在",
+		})
+		return
+	}
+	fmt.Println("user:", user)
+	flag := utils.ValidPassword(password, user.Salt, user.PassWord)
+	if !flag {
+		c.JSON(200, gin.H{
+			"message": "密码不正确",
+		})
+		return
+	}
+	pwd := utils.MakePassword(password, user.Salt)
+	data = models.FindUserByNameAndPwd(name, pwd)
+	c.JSON(200, gin.H{
+		"message": data,
 	})
 }
